# lagrangian_kan

./: .gitignore  README.md  __init__.py  example_simple.py  pyproject.toml
docs/images/: README.md
lagrangian/: __init__.py  derivatives.py  integrator.py  solver.py
losses/: __init__.py  lagrangian_losses.py
notebooks/: HarmonicOscillator.ipynb  SimplePendulum.ipynb
systems/: __init__.py  base.py  harmonic_oscillator.py  simple_pendulum.py
training/: __init__.py  trainer.py
utils/: __init__.py  metrics.py  visualization.py
